# ur-rl-experiments

./: .gitignore  README.md
robotiq/robotiq_description/urdf/: robotiq_85_gripper.urdf.xacro
ur5/ur5_description/urdf/: common.gazebo.xacro  ur.transmission.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf  ur5_robotiq85_gripper.urdf.xacro
ur5/ur5_gazebo/controller/: ur5gripper_controllers.yaml
ur5/ur5_gazebo/launch/: ur5_controllers.launch  ur5_cubes.launch  ur5_cubes_multi.launch  ur5_setup.launch  ur5_setup_multi.launch
ur5/ur5_gazebo/scripts/: send_gripper.py  send_joints.py
ur5/ur5_gazebo/worlds/: ur5_cubes.world
ur5/ur5_rl/: CMakeLists.txt  package.xml  setup.py
ur5/ur5_rl/config/: ppo_multi.yaml  reach_goal_params.yaml
ur5/ur5_rl/launch/: a2c.launch  dqn.launch  ppo.launch  ppo_multi.launch  ur5_rl.launch
ur5/ur5_rl/src/ur5_rl/: a2c_main.py  dqn_main.py  dqn_utils.py  ppo_main.py  ppo_main_multi.py  run_rl_utils.py
ur5/ur5_rl/src/ur5_rl/algorithms/: a2c.py  dqn.py  nn_utils.py  ppo.py  replay_buffer.py  runner.py
ur5/ur5_rl/src/ur5_rl/envs/: RLObservation.py  __init__.py  controllers_connection.py  controllers_publishers.py  gazebo_connection.py  robot_gazebo_env_goal.py
ur5/ur5_rl/src/ur5_rl/envs/multiprocessing/: __init__.py  gazebo_master.py  gazebo_worker.py  shared_state.py  test.py
ur5/ur5_rl/src/ur5_rl/envs/robot_envs/: __init__.py  ur5_env.py  ur5_state.py
ur5/ur5_rl/src/ur5_rl/envs/task_envs/: RLObservation.py  __init__.py  ur5_env_reach_goal.py
